# pystackw7

./: .gitignore  README.md  pyproject.toml
.github/workflows/: django.yml
core/: settings.py  urls.py
core/contas/: admin.py  apps.py  models.py  urls.py  views.py
core/contas/migrations/: 0001_initial.py
core/contas/templates/: ver_contas.html
core/docs/aula1/: Configuratiom.md  Perfil.md
core/docs/aula2/: 1-Exrato novo valor.md  2-Extrato view extrato.md  3-Exportar extrato.md  4-Definir planejamento.md  5-Ver planejamento.md
core/docs/aula3/: Contas.md  Dashboard.md  Toques_finais.md
core/extrato/: admin.py  apps.py  models.py  urls.py  views.py
core/extrato/migrations/: 0001_initial.py
core/extrato/templates/: novo_valor.html  view_extrato.html
core/perfil/: apps.py  models.py  urls.py  utils.py  views.py
core/perfil/migrations/: 0001_initial.py
core/perfil/templates/: dashboard.html  gerenciar.html  home.html
core/planejamento/: apps.py  urls.py  views.py
core/planejamento/templates/: definir_planejamento.html  ver_planejamento.html
core/templates/bases/: base.html
core/templates/partials/: extrato.html
core/templates/static/extrato/css/: view_extrato.css
core/templates/static/perfil/css/: gerenciar.css
