[tool.poetry]
name = "pystackw7"
version = "0.1.0"
description = "Com esse projeto implementaremos um aplicação financeira apoio PYTHONANDO."
authors = ["Jorge Luiz Plautz <jorge.plautz@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
pillow = "^10.0.0"
weasyprint = "^59.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = [
    "test*.py",
    "*tests.py",
]
minversion = "6.0"
addopts = "-ra -q -v"
# testpaths = [
#     "/tests",
# ]
DJANGO_SETTINGS_MODULE = "core.settings"


[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
# docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=core -vv"
post_test = "coverage html"
